syntax = "proto3";

package geo_api;

service GeoService {
  rpc Nearby(NearbyRequest) returns (NearbyResponse);
  rpc PeekInfo(PeekInfoRequest) returns (PeekInfoResponse);
}

message NearbyRequest {
  int64 nearby_num = 1;
  double latitude = 2;
  double longitude = 3;
}

message NearbyResponse {
  int64 result_num = 1;
  repeated string hotel_ids = 2;
  repeated double distances = 3;
}

message PeekInfoRequest {
  repeated string hotel_ids = 1;
}

message PeekInfoResponse {
  repeated HotelInfo hotel_info_list = 1;
}

message HotelInfo {
  string id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
  int64 provide = 5;
}
